--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button onclick="generateTable()">Generate Table</button>
     <br><br>
     <table id="myTable"></table>
+    <button onclick="generateOutput()">Generate Output</button>
     <script src="script.js"></script>
 </body>
 </html>
