--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <br><br>
     <table id="myTable"></table>
     <button onclick="generateOutput()">Generate Output</button>
+    <br>
+    <table id="outputTable"></table>
+    <button onclick="refresh()" >Click to clear input </button>
     <script src="script.js"></script>
 </body>
 </html>
